# KFLog

./: .cproject  .cvsignore  .gitattributes  .gitignore  .project  AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL-windows  Kflog4Windows.pro  Makefile.am  Makefile.dist  Makefile.in  Makefile.qmake  README  README-AIRFIELDS  README-AIRSPACE  README-AIRSPACES  README-LANDSCAPE  README-MAP  README-POINTS  README-TRANSLATIONS  README.md  TODO  acinclude.m4  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  kflog.kdevelop  kflog.kdevprj  kflog.lsm  kflog.pro  kflog.spec  tips
Releases/Debian/: kflog_5.0.0_amd64.deb  kflog_5.0.1_amd64.deb  kflog_5.0.2_amd64.deb
Releases/Ubuntu/: kflog_5.0.0_amd64.deb  kflog_5.0.1_amd64.deb  kflog_5.0.2_amd64.deb
admin/: Makefile.common  acinclude.m4.in  cvs.sh  detect-autoconf.pl
article/: german.txt
doc/: IGC_Flight_Data_File_Standard.war  Makefile.in  Map-Format-Description.sxw  Testbench.sxc
doc/design/: FileFilter plugin system.txt
doc/en/: Makefile.am  Makefile.in  index.docbook
doc/kflog-handbuch-de/: Anhang.tex  Auswertung_von_Flügen.tex  Benutzen_von_KFlog.tex  Bezug_Installation.tex  Danksagung.tex  KFlog_Handbuch.tex  Logger-Dialog.tex  Makefile  Programmübersicht.tex  README.DE  Vorwort.tex
doc/kflog-handbuch-de/Bilder/fertig/: 3-D-Ansicht-Hilfe.ps  3-D-Ansicht.ps  Animation.ps  Ansicht_mit_herausgelöster_Karte.ps  Aufgabe.ps  Aufgabe_editieren.ps  Aufgabe_mit_FAI-Flächen.ps  Auswertefenster.ps  Datei_öffnen.ps  Einrichtungsdialog.ps  Einrichtungsdialog_Pfade.ps  Einrichtungsdialog_aufrufen.ps  Flug_anzeigen_eingefärbt.ps  Flug_eingelesen.ps  Flugdaten_zeigen.ps  Hauptfenster.ps  Hauptfenster_mit_herausgelöster_Kartenanzeige.ps  Hauptfenster_Übersicht.ps  Home.ps  KFlog-Logo.ps  Karte_mit_Wendepunkten.ps  Loggerdialog-Anmeldung.ps  Loggerdialog-Flüge.ps  Loggerdialog.ps  Mapdownloaddialog.ps  Menue-Einstellungen.ps  Menü-Flug.ps  (+9 more)
dpkg/: .gitignore
dpkg/contol/: control  copyright  postinst  prerm  rules
dpkg/control/: changelog  control  copyright  postinst  prerm  rules
geodata/: Makefile  README  clip_tile.py  create_empty_tiles.py  faeroes.grass  latlon2tile.py  mapconversion_functions.grass  sort_contours.py  srtm_run.py  srtm_template.grass  tile2coors.py  write_terrain_file.cpp
kflog/: .gitignore  AirSpaceListViewItem.h  AirfieldSelectionList.cpp  AirfieldSelectionList.h  AirspaceHelper.cpp  AirspaceHelper.h  Doxyfile  DoxygenHeaderFile  Frequency.cpp  Frequency.h  Makefile.am  Makefile.in  MessageHelpBox.cpp  MessageHelpBox.h  MetaTypes.h  OpenAip.cpp  OpenAip.h  OpenAipPoiLoader.cpp  OpenAipPoiLoader.h  Speed.cpp  Speed.h  TaskEditor.cpp  TaskEditor.h  ThermalPoint.cpp  ThermalPoint.h  aboutwidget.cpp  aboutwidget.h  airfield.cpp  airfield.h  airport.cpp  airport.h  airregion.cpp  airregion.h  airspace.cpp  airspace.h  airspacelistviewitem.cpp  airspacelistviewitem.h  airspacewarningdistance.h  altitude.cpp  altitude.h  (+207 more)
kflog/guicontrols/: .cvsignore  Makefile.am  Makefile.in  coordedit.cpp  coordedit.h  kfloglistview.cpp  kfloglistview.h  kflogtable.cpp  kflogtable.h
kflog/kfrcai/: Makefile.am  README.cai  cai.desktop  cambridge.cpp  cambridge.h  flightrecorder.cpp  kfrcai.pro
kflog/kfrcai/doc/: Makefile  README  dataport_300_sv517_rev22.txt  dataport_300_sv517_rev23.txt
kflog/kfrfil/: Makefile.am  README  README.fla  fil.desktop  filser.cpp  filser.h  fla.desktop  flightrecorder.cpp  kfrfil.pro  kfrfla.pro  spg.desktop
kflog/kfrfla/: README.fla  flarm.cpp  flarm.h  flightrecorder.cpp  kfrfla.pro
kflog/kfrgcs/: Makefile.am  README  dbbconv.cpp  dbbconv.h  flightrecorder.cpp  flightrecorder.h  gcs.desktop  grecord.cpp  grecord.h  kfrgcs.pro  utils.cpp  utils.h  vla_support.h  vlapi2.cpp  vlapi2.h  vlapierr.h  vlapihlp.cpp  vlapihlp.h  vlapisys_linux.cpp  vlapisys_linux.lo  vlapityp.h  vlconv.cpp  vlconv.h  volkslogger.cpp  volkslogger.h
kflog/kfrgmn/: Makefile.am  README  flightrecorder.cpp  flightrecorder.h  garmin.cpp  garmin.h  garminfr.cpp  garminfr.h  garmintypes.h  gmn.desktop  kfrgmn.pro
kflog/kfrxcu/: .cvsignore  Makefile.am  cumulus.cpp  cumulus.h  cumuluswaypointfile.cpp  cumuluswaypointfile.h  flightrecorder.cpp  xcu.desktop
kflog/kfrxsp/: Makefile.am  flightrecorder.cpp  kfrxsp.pro  soaringpilot.cpp  soaringpilot.h  xsp.desktop
kflog/map-icons/: Makefile  Makefile.am  Makefile.in  ambheliport.xpm  balloon.xpm  closed.xpm  compoint.xpm  glider2.xpm  obst_group.xpm  obst_group_light.xpm  paraglider.xpm  routepoint.xpm  thermal.xpm  vor.xpm  vortac.xpm
kflog/map-icons/small/: Makefile  Makefile.am  Makefile.in  balloon.xpm  civheliport.xpm  civmilair.xpm  compoint.xpm  obst_group.xpm  outlanding.xpm  paraglider.xpm  thermal.xpm  vortac.xpm  waypoint.xpm
kflog/mapicons/: airfield_c.xpm  airfield_g.xpm  airport.xpm  airspace.xpm  civheliport.xpm  civmilair.xpm  empty.xpm  glider.xpm  glider_winch.xpm  jump.xpm  landmark.xpm  milairport.xpm  milheliport.xpm  ndb.xpm  obst_light.xpm  obstacle.xpm  outlanding.xpm  tacan.xpm  ul.xpm  village.xpm  vordme.xpm  waypoint.xpm
kflog/mapicons/small/: airfield_c.xpm  airport.xpm  ambheliport.xpm  closed.xpm  empty.xpm  glider.xpm  glider2.xpm  glider_winch.xpm  jump.xpm  landmark.xpm  milairport.xpm  milheliport.xpm  ndb.xpm  obstacle.xpm  routepoint.xpm  tacan.xpm  ulf.xpm  village.xpm  vor.xpm  vordme.xpm
kflog/opengl_igc/: Makefile.am  glview.cpp  glview.h  opengl_igc.cpp  opengl_igc.h  opengl_igc.pro  openglwidget.cpp  openglwidget.h
kflog/pics/: Makefile.am  Makefile.in  thermal.xpm  village.xpm
kflog/templates/: cpp_template  header_template
po/: .cvsignore  Makefile.am  Makefile.in  de.gmo  de.po  es.po  fr.gmo  fr.po  howto.txt  it.po  kflog.pot  nl.po  no.gmo  no.po  sv.gmo  sv.po
testdata/: 391V7331.igc  45VGW1J3.IGC  kflog_welt2000_file_access.csv
windows_setup/: License.rtf  RemoveKFlogDataDirectories.cmd  RemoveKflogRegistryKey.cmd  WindowsReleaseNotes.rtf  buildKits.ps1  dummy.cpp  kflog.wix  license_beta.rtf  license_beta.txt  setup.nsi  windows_setup.pro
(+4 files in other folders)
