####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libguicontrols_a_METASOURCES = AUTO

noinst_LIBRARIES = libguicontrols.a

libguicontrols_a_SOURCES = kfloglistview.cpp kflogtable.cpp coordedit.cpp 


EXTRA_DIST = coordedit.cpp coordedit.h kflogtable.cpp kflogtable.h kfloglistview.cpp kfloglistview.h 

####### kdevelop will overwrite this part!!! (end)############
