####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libkfrgmn.la


INCLUDES = $(all_includes)


LDFLAGS =  -s       


libkfrgmn_la_LDFLAGS = -version-info 0:0:0

libkfrgmn_la_METASOURCES = AUTO

libkfrgmn_la_SOURCES = garmin.cpp flightrecorder.cpp 


EXTRA_DIST = flightrecorder.cpp flightrecorder.h garmin.cpp garmin.h garmintypes.h gmn.desktop README 

####### kdevelop will overwrite this part!!! (end)############
