####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libkfrgmn.la


INCLUDES = $(all_includes)


LDFLAGS =              


libkfrgmn_la_LDFLAGS = -version-info 0:0:0

libkfrgmn_la_METASOURCES = AUTO

libkfrgmn_la_SOURCES = garminfr.cpp garmin.cpp flightrecorder.cpp 


EXTRA_DIST = flightrecorder.cpp flightrecorder.h garmin.cpp garmin.h garmintypes.h gmn.desktop README garminfr.cpp garminfr.h 

####### kdevelop will overwrite this part!!! (end)############
