####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libkfrxcu.a

INCLUDES = $(all_includes)

libkfrxcu_a_METASOURCES = AUTO

libkfrxcu_a_SOURCES = cumuluswaypointfile.cpp flightrecorder.cpp cumulus.cpp 


EXTRA_DIST = cumulus.cpp cumulus.h flightrecorder.cpp Makefile.am xcu.desktop cumuluswaypointfile.cpp cumuluswaypointfile.h 

####### kdevelop will overwrite this part!!! (end)############
