####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = cumulus.cpp cumulus.h flightrecorder.cpp Makefile.am xcu.desktop cumuluswaypointfile.cpp cumuluswaypointfile.h 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kflog/logger/
	$(INSTALL_DATA) $(srcdir)/xcu.desktop $(kde_datadir)/kflog/logger/xcu.desktop

uninstall-local:
	-rm -f $(kde_datadir)/kflog/logger/xcu.desktop

####### kdevelop will overwrite this part!!! (end)############
